<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nutrition</string>
    <string name="titleTopics">Topics</string>
    <string name="titleQuestionsList">Questions</string>
    <string name="favorite">Favorites</string>
    <string name="addQuestion">Add a Question</string>
    <string name="profile">Profile</string>
    <string name="Settings">Settings</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="register">Register</string>

    <string-array name="topics_array">
        <item>All</item>
        <item>Fruit</item>
        <item>Vegetables</item>
        <item>Proteins</item>
        <item>Dairy</item>
        <item>Grains</item>
        <item>Vegan</item>
        <item>Fastfood</item>
        <item>Drinks</item>
        <item>Desserts and cakes</item>
        <item>Candies</item>
        <item>General knowledge</item>
    </string-array>

    <string-array name="topics_array_spinner">
        <item>Fruit</item>
        <item>Vegetables</item>
        <item>Proteins</item>
        <item>Dairy</item>
        <item>Grains</item>
        <item>Vegan</item>
        <item>Fastfood</item>
        <item>Drinks</item>
        <item>Desserts and cakes</item>
        <item>Candies</item>
        <item>General knowledge</item>
    </string-array>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Favorite">Favorites</string>
    <string name="registration">Registration</string>
    <string name="newQuestion">New Question</string>
    <string name="saved_high_score_default">1</string>
    <string name="emptyList">Empty list</string>
    <string name="enterTitle">Enter a title</string>
    <string name="author">Author: </string>
    <string name="nb_posts">Questions: </string>
    <string name="save">save</string>
    <string name="yourPosts">Your questions</string>
    <string name="rememberLogin">Remember login</string>
    <string name="editContent">Edit content</string>
    <string name="imgErro">Select an image</string>
    <string name="thanksRegistration">Registration successful</string>
    <string name="changePhoto">Change photo</string>
    <string name="photochange">photo changed</string>
    <string name="imgSelected">image selected</string>
    <string name="selectimage">Select an image</string>
    <string name="createAccount">Create an account</string>
    <string name="login">Log in</string>
    <string name="topicselected">Topic selected:</string>
    <string name="topicChoose">Topic selected</string>
    <string name="enterPassword">Enter a password</string>
    <string name="enterUsername">Enter username</string>
    <string name="unameResctriction">characters: min 3</string>
    <string name="passwordWrong">Password does not match</string>
    <string name="usernameExist">Username already exist</string>
    <string name="title">Title ...</string>
    <string name="content">Content ...</string>
    <string name="editTitle">Edit title</string>
    <string name="chooseTopic">Choose a topic</string>
    <string name="questionCreated">Question created</string>
    <string name="Languages">Languages</string>
    <string name="Account">Account</string>
    <string name="DeletAccount">delete my account</string>
    <string name="loggOff">Log off</string>
    <string name="Loggof">Logg of</string>
    <string name="deleteAccountConfirm">Are you sure you want delete your account?</string>
    <string name="accountDelete">Account deleted</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="Comments">Comments</string>
    <string name="addComment">Add public comment...</string>
    <string name="cancel">Cancel</string>
    <string name="commentAdded">Comment added</string>
    <string name="enterComment">Enter a comment</string>
    <string name="nbLike">Like: </string>
    <string name="sortASC">ASC</string>
    <string name="sortTime">New</string>
    <string name="addedDate">Added: </string>
    <string name="deletAccount">Delete my account</string>
    <string name="sortTimeOld">Old</string>
    <string name="sortDESC">DESC</string>
    <string name="english">EN</string>
    <string name="french">FR</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="loginSuccess">Login successfull</string>
    <string name="favoriDeleted">All favorites deleted</string>
    <string name="NofavoriDeleted">No favorites in list</string>
    <string name="deleteAllFavorites">Delete all favorites</string>
    <string name="deleteAllFavoriteMessage">Are you sure to delete all your favorites?</string>
    <string name="topic">Topic</string>
    <string name="areysure">Are you sure?</string>
    <string name="messageDelete1Favorite">You will delete this favorite</string>
    <string name="delete">delete</string>
    <string name="favoriteDeleted">Favorite delete</string>
    <string name="favoriteAdded">Favorite added</string>
    <string name="cancelling">cancel</string>
    <string name="view">view</string>
    <string name="comment">Comments</string>
    <string name="close">close</string>
    <string name="nbCommentsInfo">Comments:</string>
    <string name="nbFavorites">Favorites:</string>
    <string name="share">Share the question</string>
    <string name="English">English</string>
    <string name="French">French</string>
    <string name="loginWrong">Username or password does not match</string>
    <string name="saveComent">add</string>
    <string name="commentInfo">Comments: </string>
    <string name="enterContent">Enter content</string>
    <string name="characMinMax">characters: min 3, max 70</string>
    <string name="characMin">characters: min 30</string>
    <string name="notOnline">You are not online</string>
    <string name="notConnected">No internet</string>
    <string name="loading">synchronize ...</string>
</resources>

