<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.xavier.projectxavier.QuestionAdd"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/activity_adding_question"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="32dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:descendantFocusability="beforeDescendants"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:text="@string/selectimage"
            android:textStyle="bold"
            android:textSize="9pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSelectImage"
            android:textColor="@color/darkGray"/>

        <ImageView
            android:id="@+id/imChoose"
            android:layout_width="match_parent"
            android:layout_marginTop="10pt"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/image_add">
        </ImageView>

        <TextView
            android:id="@+id/tvImgError"
            android:text=""
            android:textColor="@color/redError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:text="@string/chooseTopic"
            android:textStyle="bold"
            android:textSize="9pt"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvChooseTopic"
            android:textColor="@color/darkGray"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:id="@+id/profile_list_layout"
        android:background="@drawable/linear_line">


        <Spinner
            android:id="@+id/spinnerTopics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/topics_array"
            android:layout_alignParentTop="true"/>

    </LinearLayout>


        <TextView
            android:id="@+id/tvEditTitle"
            android:text="@string/editTitle"
            android:textStyle="bold"
            android:textSize="9pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/darkGray"/>

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"
            android:ems="10"
            android:hint="@string/title"
            android:layout_marginTop="10dp"
            android:background="@drawable/linear_line"/>

        <TextView
            android:id="@+id/tvEditContent"
            android:text="@string/editContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="9pt"
            android:textColor="@color/darkGray"/>

        <EditText
            android:id="@+id/etContent"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"
            android:ems="10"
            android:hint="@string/content"
            android:background="@drawable/linear_line"/>

        <Button
            android:id="@+id/btSave"
            android:text="@string/save"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:background="@color/greenDarkTransparent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:onClick="saveQuestion"/>


    </LinearLayout>
</ScrollView>

