<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

<LinearLayout
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">


    <TextView
        android:text="@string/Languages"
        android:textStyle="bold"
        android:textSize="9pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"/>

    <ImageButton
        android:layout_width="150px"
        android:layout_height="150px"
        app:srcCompat="@drawable/flagenglish"
        android:layout_marginTop="10dp"
        android:id="@+id/imbFlagEnglish"/>

    <ImageButton
        android:layout_width="150px"
        android:layout_height="150px"
        app:srcCompat="@drawable/flagfrance"
        android:layout_marginTop="10dp"
        android:id="@+id/imbFlagFrance"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10pt"
        android:background="@drawable/linear_border">
        <TextView
            android:text="@string/Account"
            android:textStyle="bold"
            android:textSize="9pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvAccount"/>


        <TextView
            android:text="@string/loggOff"
            android:layout_marginTop="10pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLogOff"
            android:onClick="logOff"/>

        <TextView
            android:text="@string/deletAccount"
            android:layout_marginTop="10pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btDeleteAccount"
            android:onClick="deleteUser"/>



    </LinearLayout>




</LinearLayout>
    </ScrollView>