<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">



    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="5pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">



        <TextView
            android:id="@+id/tvTopicInfo"
            android:text="@string/topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="8pt"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/tvDialogTopicName"
            android:text="topic"
            android:layout_marginLeft="3pt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="5pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">




        <TextView
            android:id="@+id/tvDialogComments"
            android:text="@string/Comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="8pt"
            android:textColor="@color/black"

            android:layout_gravity="center_vertical"
            />

        <TextView
            android:id="@+id/tvDialogCommentsCpt"
            android:text="12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="9pt"
            android:layout_marginLeft="5pt"
            android:textStyle="bold"

            android:layout_gravity="center_vertical"
            />

    </LinearLayout>



    <TextView
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linear_up_border"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10pt"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/imgQuestionAuthor"
            android:src="@drawable/profile"
            android:layout_width="35pt"
            android:layout_height="35pt"
            android:scaleType="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10pt"
            android:background="#FFFFBB33"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvDialogAuthorName"
                android:text="@string/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                />



            <TextView
                android:id="@+id/tvDialogCountQuestionInfo"
                android:text="@string/nb_posts"
                android:layout_marginTop="10pt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                 />
            <TextView
                android:text=""
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5pt"
                android:textColor="@color/blueFont"
                android:id="@+id/nbPostsCount" />


        </LinearLayout>

    </LinearLayout>








    </LinearLayout>